--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,2 +1,75 @@
 @charset "UTF-8";
+ 
 
+h1 {
+    text-align: center;
+    font-weight: bold;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
+h2 {
+    text-align: center;
+    font-weight: normal;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+h3 {
+    text-align: center;
+    font-weight: normal;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+nav {
+    text-align: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight:bold;
+    margin: 50px;
+}
+
+#linkum {
+    margin-right:20px;
+    display:inline
+}
+
+#linkdois {
+    margin-right:20px;
+    display:inline
+}
+
+#linktres {
+    margin-right:20px;
+    display:inline
+}
+
+#linkquatro {
+    margin-right:20px;
+    display:inline
+}
+
+#linkcinco{
+    margin-right:20px;
+    display:inline
+}
+
+a.link:link {
+    text-align: center;
+    color: #000000;
+    text-decoration:none;
+}
+
+a.link:visited {
+    text-align: center;
+    color: #000000;
+    text-decoration: none;
+}
+
+a.link:active {
+    text-align: center;
+    color: #000000;
+    text-decoration: none;
+}
+
+a.link:hover {
+    text-align: center;
+    color: #999999;
+    text-decoration:none;
+}
